# yasl

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run_clang_format.sh
cmake/: FetchUnity.cmake
include/yasl/: yasl.h  yasl_types.h
src/: CMakeLists.txt  yasl.c  yasl_internal.h
src/crc/: checksum.h  crc16.c  crc32.c  crc64.c  crc8.c  crcccitt.c  crcdnp.c  crckrmit.c  crcsick.c  nmea-chk.c
ut/: CMakeLists.txt  main.c  test_yasl_deserialize.c  test_yasl_general.c  test_yasl_serialize.c
